--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-watch": "~0.6.9",
     "gulp-concat": "~2.4.0",
     "gulp-uglify": "~1.0.1",
-    "vinyl-source-stream": "~1.0.0"
+    "vinyl-source-stream": "~1.0.0",
+    "jade": "~1.7.0"
   }
 }
