--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-concat": "~2.4.0",
     "gulp-uglify": "~1.0.1",
     "vinyl-source-stream": "~1.0.0",
-    "jade": "~1.7.0"
+    "jade": "~1.7.0",
+    "gulp-mocha": "~1.1.0"
   }
 }
