--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-uglify": "~1.0.1",
     "vinyl-source-stream": "~1.0.0",
     "jade": "~1.7.0",
-    "gulp-mocha": "~1.1.0"
+    "gulp-mocha": "~1.1.0",
+    "chai": "~1.9.1"
   }
 }
