--- a/package.json
+++ b/package.json
@@ -10,19 +10,8 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "~3.8.7",
-    "gulp-connect": "~2.0.6",
-    "gulp-consolidate": "~0.1.2",
-    "gulp-gzip": "0.0.8",
-    "gulp-less": "~1.3.5",
-    "gulp-minify-css": "~0.3.7",
     "gulp-plumber": "~0.6.5",
-    "gulp-rename": "~1.2.0",
-    "gulp-watch": "~0.6.9",
     "gulp-concat": "~2.4.0",
-    "gulp-uglify": "~1.0.1",
-    "vinyl-source-stream": "~1.0.0",
-    "jade": "~1.7.0",
-    "gulp-mocha": "~1.1.0",
-    "chai": "~1.9.1"
+    "gulp-mocha-phantomjs": "~0.5.0"
   }
 }
