--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-plumber": "~0.6.5",
     "gulp-concat": "~2.4.0",
     "gulp-mocha-phantomjs": "~0.5.0",
-    "gulp-template-compile": "~0.2.1"
+    "gulp-template-compile": "~0.2.1",
+    "gulp-rename": "~1.2.0"
   }
 }
