--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "~3.8.7",
-    "gulp-plumber": "~0.6.5",
     "gulp-concat": "~2.4.0",
     "gulp-mocha-phantomjs": "~0.5.0",
+    "gulp-plumber": "~0.6.5",
+    "gulp-rename": "~1.2.0",
     "gulp-template-compile": "~0.2.1",
-    "gulp-rename": "~1.2.0"
+    "gulp-watch": "^1.0.7"
   }
 }
